fix/update ai-config, scheduler

--- a/web/slar/src/components/groups/timeline.css
+++ b/web/slar/src/components/groups/timeline.css
@@ -1,4 +1,4 @@
-
+/* 
 .vis-grid.vis-today {
   background-color: rgba(59, 130, 246, 0.1);
 }
@@ -10,4 +10,4 @@
 .vis-timeline {
   border-radius: 10px;
 }
-
+ */
